# cc-hpc

./: .gitignore  Cargo.toml  README.md  cc.tex  mersenne.tex  verifed_number.txt
.github/workflows/: LaTeX.yml
src/: log.rs  main.rs  mersenne.rs  mersennecsv.rs  odd.lua  odd.rs  oddi.rs  one.rs
