[package]
name = "cc-hpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.4"
num-traits = "*"
threadpool = "1.8.1"
evalexpr = "11.2.0"
[[bin]]
name = "cc"
path = "src/main.rs"

[[bin]]
name = "odd"
path = "src/odd.rs"


[[bin]]
name = "oddi"
path = "src/oddi.rs"

[[bin]]
name = "log"
path = "src/log.rs"

[[bin]]
name = "mersenne"
path = "src/mersenne.rs"

[[bin]]
name = "mersennecsv"
path = "src/mersennecsv.rs"

[[bin]]
name = "one"
path = "src/one.rs"
