[package]
name = "cc-hpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.6"
num-traits = "0.2.19"
threadpool = "1.8.1"
evalexpr = "12.0.2"
[[bin]]
name = "cc"
path = "src/main.rs"

[[bin]]
name = "oddi"
path = "src/oddi.rs"

[[bin]]
name = "mersenne"
path = "src/mersenne.rs"

[[bin]]
name = "mersennecsv"
path = "src/mersennecsv.rs"

[[bin]]
name = "one"
path = "src/one.rs"
